--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+altair==5.3.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 anyio==4.3.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 appnope==0.1.4 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0" and platform_system == "Darwin"
 argon2-cffi-bindings==21.2.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
@@ -9,17 +10,24 @@ attrs==23.2.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0
 babel==2.14.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 beautifulsoup4==4.12.3 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 bleach==6.1.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+blinker==1.7.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+cachetools==5.3.3 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 certifi==2024.2.2 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 cffi==1.16.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 charset-normalizer==3.3.2 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
-colorama==0.4.6 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0" and sys_platform == "win32"
+click==8.1.7 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+colorama==0.4.6 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0" and (sys_platform == "win32" or platform_system == "Windows")
 comm==0.2.2 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 debugpy==1.8.1 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 decorator==5.1.1 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 defusedxml==0.7.1 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 executing==2.0.1 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 fastjsonschema==2.19.1 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+filelock==3.13.4 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 fqdn==1.5.1 ; python_full_version >= "3.12.1" and python_version < "4"
+fsspec==2024.3.1 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+gitdb==4.0.11 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+gitpython==3.1.43 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 h11==0.14.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 httpcore==1.0.5 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 httpx==0.27.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
@@ -43,50 +51,98 @@ jupyter-server==2.14.0 ; python_full_version >= "3.12.1" and python_full_version
 jupyterlab-pygments==0.3.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 jupyterlab-server==2.26.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 jupyterlab==4.1.6 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+llvmlite==0.42.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+markdown-it-py==3.0.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 markupsafe==2.1.5 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 matplotlib-inline==0.1.7 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+mdurl==0.1.2 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 mistune==3.0.2 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+more-itertools==10.2.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+mpmath==1.3.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 nbclient==0.10.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 nbconvert==7.16.3 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 nbformat==5.10.4 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 nest-asyncio==1.6.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+networkx==3.3 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 notebook-shim==0.2.4 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+numba==0.59.1 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+numpy==1.26.4 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+nvidia-cublas-cu12==12.1.3.1 ; platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+nvidia-cuda-cupti-cu12==12.1.105 ; platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+nvidia-cuda-nvrtc-cu12==12.1.105 ; platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+nvidia-cuda-runtime-cu12==12.1.105 ; platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+nvidia-cudnn-cu12==8.9.2.26 ; platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+nvidia-cufft-cu12==11.0.2.54 ; platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+nvidia-curand-cu12==10.3.2.106 ; platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+nvidia-cusolver-cu12==11.4.5.107 ; platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+nvidia-cusparse-cu12==12.1.0.106 ; platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+nvidia-nccl-cu12==2.19.3 ; platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+nvidia-nvjitlink-cu12==12.4.127 ; platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+nvidia-nvtx-cu12==12.1.105 ; platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+openai-whisper @ git+https://github.com/openai/whisper.git@ba3f3cd54b0e5b8ce1ab3de13e32122d0d5f98ab ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 overrides==7.7.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 packaging==24.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+pandas==2.2.2 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 pandocfilters==1.5.1 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 parso==0.8.4 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 pexpect==4.9.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0" and (sys_platform != "win32" and sys_platform != "emscripten")
+pillow==10.3.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 platformdirs==4.2.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 prometheus-client==0.20.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 prompt-toolkit==3.0.43 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+protobuf==4.25.3 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 psutil==5.9.8 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 ptyprocess==0.7.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0" and (sys_platform != "win32" and sys_platform != "emscripten" or os_name != "nt")
 pure-eval==0.2.2 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+pyarrow==16.0.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+pyaudio==0.2.14 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 pycparser==2.22 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+pydeck==0.8.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 pygments==2.17.2 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 python-dateutil==2.9.0.post0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 python-json-logger==2.0.7 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+pytz==2024.1 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 pywin32==306 ; sys_platform == "win32" and platform_python_implementation != "PyPy" and python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 pywinpty==2.0.13 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0" and os_name == "nt"
 pyyaml==6.0.1 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 pyzmq==26.0.2 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 referencing==0.34.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+regex==2024.4.16 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 requests==2.31.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 rfc3339-validator==0.1.4 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 rfc3986-validator==0.1.1 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+rich==13.7.1 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 rpds-py==0.18.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 send2trash==1.8.3 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+shellingham==1.5.4 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 six==1.16.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+smmap==5.0.1 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 sniffio==1.3.1 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 soupsieve==2.5 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+speechrecognition==3.10.3 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 stack-data==0.6.3 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+streamlit==1.33.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+sympy==1.12 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+tenacity==8.2.3 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 terminado==0.18.1 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+tiktoken==0.6.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 tinycss2==1.2.1 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+toml==0.10.2 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+toolz==0.12.1 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+torch==2.2.2 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+torchaudio==2.2.2 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+torchvision==0.17.2 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 tornado==6.4 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+tqdm==4.66.2 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 traitlets==5.14.3 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+triton==2.3.0 ; platform_machine == "x86_64" and sys_platform == "linux" and python_full_version >= "3.12.1" and python_full_version < "4.0.0" or sys_platform == "linux2" and python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+typer==0.12.3 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 types-python-dateutil==2.9.0.20240316 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+typing-extensions==4.11.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+tzdata==2024.1 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 uri-template==1.3.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 urllib3==2.2.1 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+watchdog==4.0.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0" and platform_system != "Darwin"
 wcwidth==0.2.13 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 webcolors==1.13 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 webencodings==0.5.1 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
