--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
+aiohttp==3.9.5 ; python_full_version >= "3.12.1" and python_version < "4.0"
+aiosignal==1.3.1 ; python_full_version >= "3.12.1" and python_version < "4.0"
 altair==5.3.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+annotated-types==0.6.0 ; python_full_version >= "3.12.1" and python_version < "4.0"
 anyio==4.3.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 appnope==0.1.4 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0" and platform_system == "Darwin"
 argon2-cffi-bindings==21.2.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
@@ -6,18 +9,19 @@ argon2-cffi==23.1.0 ; python_full_version >= "3.12.1" and python_full_version < 
 arrow==1.3.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 asttokens==2.4.1 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 async-lru==2.0.4 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
-attrs==23.2.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+attrs==23.2.0 ; python_full_version >= "3.12.1" and python_version < "4.0"
 babel==2.14.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 beautifulsoup4==4.12.3 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 bleach==6.1.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 blinker==1.7.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 cachetools==5.3.3 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
-certifi==2024.2.2 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+certifi==2024.2.2 ; python_full_version >= "3.12.1" and python_version < "4.0"
 cffi==1.16.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
-charset-normalizer==3.3.2 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+charset-normalizer==3.3.2 ; python_full_version >= "3.12.1" and python_version < "4.0"
 click==8.1.7 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 colorama==0.4.6 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0" and (sys_platform == "win32" or platform_system == "Windows")
 comm==0.2.2 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+dataclasses-json==0.6.4 ; python_full_version >= "3.12.1" and python_version < "4.0"
 debugpy==1.8.1 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 decorator==5.1.1 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 defusedxml==0.7.1 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
@@ -25,20 +29,23 @@ executing==2.0.1 ; python_full_version >= "3.12.1" and python_full_version < "4.
 fastjsonschema==2.19.1 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 filelock==3.13.4 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 fqdn==1.5.1 ; python_full_version >= "3.12.1" and python_version < "4"
+frozenlist==1.4.1 ; python_full_version >= "3.12.1" and python_version < "4.0"
 fsspec==2024.3.1 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 gitdb==4.0.11 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 gitpython==3.1.43 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+greenlet==3.0.3 ; python_full_version >= "3.12.1" and python_version < "4.0" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32")
 h11==0.14.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 httpcore==1.0.5 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 httpx==0.27.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
-idna==3.7 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+idna==3.7 ; python_full_version >= "3.12.1" and python_version < "4.0"
 ipykernel==6.29.4 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 ipython==8.23.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 isoduration==20.11.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 jedi==0.19.1 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 jinja2==3.1.3 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 json5==0.9.25 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
-jsonpointer==2.4 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+jsonpatch==1.33 ; python_full_version >= "3.12.1" and python_version < "4.0"
+jsonpointer==2.4 ; python_full_version >= "3.12.1" and python_version < "4.0"
 jsonschema-specifications==2023.12.1 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 jsonschema==4.21.1 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 jsonschema[format-nongpl]==4.21.1 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
@@ -51,14 +58,20 @@ jupyter-server==2.14.0 ; python_full_version >= "3.12.1" and python_full_version
 jupyterlab-pygments==0.3.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 jupyterlab-server==2.26.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 jupyterlab==4.1.6 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+langchain-community==0.0.34 ; python_full_version >= "3.12.1" and python_version < "4.0"
+langchain-core==0.1.45 ; python_full_version >= "3.12.1" and python_version < "4.0"
+langsmith==0.1.49 ; python_full_version >= "3.12.1" and python_version < "4.0"
 llvmlite==0.42.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 markdown-it-py==3.0.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 markupsafe==2.1.5 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+marshmallow==3.21.1 ; python_full_version >= "3.12.1" and python_version < "4.0"
 matplotlib-inline==0.1.7 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 mdurl==0.1.2 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 mistune==3.0.2 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 more-itertools==10.2.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 mpmath==1.3.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+multidict==6.0.5 ; python_full_version >= "3.12.1" and python_version < "4.0"
+mypy-extensions==1.0.0 ; python_full_version >= "3.12.1" and python_version < "4.0"
 nbclient==0.10.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 nbconvert==7.16.3 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 nbformat==5.10.4 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
@@ -66,7 +79,7 @@ nest-asyncio==1.6.0 ; python_full_version >= "3.12.1" and python_full_version < 
 networkx==3.3 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 notebook-shim==0.2.4 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 numba==0.59.1 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
-numpy==1.26.4 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+numpy==1.26.4 ; python_full_version >= "3.12.1" and python_version < "4.0"
 nvidia-cublas-cu12==12.1.3.1 ; platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 nvidia-cuda-cupti-cu12==12.1.105 ; platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 nvidia-cuda-nvrtc-cu12==12.1.105 ; platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.12.1" and python_full_version < "4.0.0"
@@ -80,8 +93,9 @@ nvidia-nccl-cu12==2.19.3 ; platform_system == "Linux" and platform_machine == "x
 nvidia-nvjitlink-cu12==12.4.127 ; platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 nvidia-nvtx-cu12==12.1.105 ; platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 openai-whisper @ git+https://github.com/openai/whisper.git@ba3f3cd54b0e5b8ce1ab3de13e32122d0d5f98ab ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+orjson==3.10.1 ; python_full_version >= "3.12.1" and python_version < "4.0"
 overrides==7.7.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
-packaging==24.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+packaging==23.2 ; python_full_version >= "3.12.1" and python_version < "4.0"
 pandas==2.2.2 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 pandocfilters==1.5.1 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 parso==0.8.4 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
@@ -97,6 +111,8 @@ pure-eval==0.2.2 ; python_full_version >= "3.12.1" and python_full_version < "4.
 pyarrow==16.0.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 pyaudio==0.2.14 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 pycparser==2.22 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+pydantic-core==2.18.1 ; python_full_version >= "3.12.1" and python_version < "4.0"
+pydantic==2.7.0 ; python_full_version >= "3.12.1" and python_version < "4.0"
 pydeck==0.8.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 pygments==2.17.2 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 python-dateutil==2.9.0.post0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
@@ -104,11 +120,11 @@ python-json-logger==2.0.7 ; python_full_version >= "3.12.1" and python_full_vers
 pytz==2024.1 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 pywin32==306 ; sys_platform == "win32" and platform_python_implementation != "PyPy" and python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 pywinpty==2.0.13 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0" and os_name == "nt"
-pyyaml==6.0.1 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+pyyaml==6.0.1 ; python_full_version >= "3.12.1" and python_version < "4.0"
 pyzmq==26.0.2 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 referencing==0.34.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 regex==2024.4.16 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
-requests==2.31.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+requests==2.31.0 ; python_full_version >= "3.12.1" and python_version < "4.0"
 rfc3339-validator==0.1.4 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 rfc3986-validator==0.1.1 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 rich==13.7.1 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
@@ -118,12 +134,14 @@ shellingham==1.5.4 ; python_full_version >= "3.12.1" and python_full_version < "
 six==1.16.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 smmap==5.0.1 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 sniffio==1.3.1 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+soundfile==0.12.1 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 soupsieve==2.5 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 speechrecognition==3.10.3 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+sqlalchemy==2.0.29 ; python_full_version >= "3.12.1" and python_version < "4.0"
 stack-data==0.6.3 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 streamlit==1.33.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 sympy==1.12 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
-tenacity==8.2.3 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+tenacity==8.2.3 ; python_full_version >= "3.12.1" and python_version < "4.0"
 terminado==0.18.1 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 tiktoken==0.6.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 tinycss2==1.2.1 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
@@ -138,12 +156,14 @@ traitlets==5.14.3 ; python_full_version >= "3.12.1" and python_full_version < "4
 triton==2.3.0 ; platform_machine == "x86_64" and sys_platform == "linux" and python_full_version >= "3.12.1" and python_full_version < "4.0.0" or sys_platform == "linux2" and python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 typer==0.12.3 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 types-python-dateutil==2.9.0.20240316 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
-typing-extensions==4.11.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+typing-extensions==4.11.0 ; python_full_version >= "3.12.1" and python_version < "4.0"
+typing-inspect==0.9.0 ; python_full_version >= "3.12.1" and python_version < "4.0"
 tzdata==2024.1 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 uri-template==1.3.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
-urllib3==2.2.1 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
-watchdog==4.0.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0" and platform_system != "Darwin"
+urllib3==2.2.1 ; python_full_version >= "3.12.1" and python_version < "4.0"
+watchdog==4.0.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 wcwidth==0.2.13 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 webcolors==1.13 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 webencodings==0.5.1 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
 websocket-client==1.7.0 ; python_full_version >= "3.12.1" and python_full_version < "4.0.0"
+yarl==1.9.4 ; python_full_version >= "3.12.1" and python_version < "4.0"
